Try and fix input width on mobile displays

--- a/codex_of_the_damned/static/css/base.css
+++ b/codex_of_the_damned/static/css/base.css
@@ -23,7 +23,7 @@
     --article-width: min(50em, 100vw - 1em);
     --columns-width: min(75em, 100vw - 1em);
     --side-width: (99vw - 52em)/2;
-    --input-width: min(100vw - 1em, 25em);
+    --input-width: min(100vw - 1.5em, 25em);
 }
 @font-face {
     font-family: "FontAwesome";
